# PaBi_trajectories_control

./: CMakeLists.txt  package.xml
scripts/: pabi_traj.py
src/: pabi_traj.cpp  pabi_traj_client.cpp
