<?xml version="1.0"?>
<package>
  <name>PaBi_trajectories_control</name>
  <version>0.0.1</version>
  <description>ROS package to record and replay trajectories for PaBiRoboy</description>

  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roboy_communication_control</build_depend>
  <build_depend>roboy_communication_middleware</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roboy_communication_control</run_depend>
  <run_depend>roboy_communication_middleware</run_depend>

</package>
